# promote2classical

./: README.md  __init__.py  core.py  pyproject.toml
dict/: __init__.py  builtin.py  dictionary.yml
docs/superpowers/plans/: 2026-04-07-promote2classical-dictionary-expansion-plan.md
docs/superpowers/specs/: 2026-04-07-promote2classical-dictionary-expansion-design.md
promote2classical.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_promote2classical.py  test_yaml_dict.py
