[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promote2classical"
version = "0.1.0"
description = "英文单词转文言文，节约Token"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["classical-chinese", "token-optimization", "llm", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/promote2classical"
Documentation = "https://github.com/YOUR_USERNAME/promote2classical#readme"
Repository = "https://github.com/YOUR_USERNAME/promote2classical.git"
Issues = "https://github.com/YOUR_USERNAME/promote2classical/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["promote2classical*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
